bynkc/tests/fixtures/positive/126_http_result_variants/src/api.bynk
context api

service routes from http {
  on GET("/created") () -> Effect[HttpResult[String]] by v: Visitor {
    Created("created")
  }

  on GET("/nocontent") () -> Effect[HttpResult[String]] by v: Visitor {
    NoContent
  }

  on GET("/badrequest") () -> Effect[HttpResult[String]] by v: Visitor {
    BadRequest("bad request")
  }

  on GET("/unauthorized") () -> Effect[HttpResult[String]] by v: Visitor {
    Unauthorized
  }

  on GET("/forbidden") () -> Effect[HttpResult[String]] by v: Visitor {
    Forbidden
  }

  on GET("/notfound") () -> Effect[HttpResult[String]] by v: Visitor {
    NotFound
  }

  on GET("/conflict") () -> Effect[HttpResult[String]] by v: Visitor {
    Conflict("conflict")
  }

  on GET("/unprocessable") () -> Effect[HttpResult[String]] by v: Visitor {
    UnprocessableEntity("invalid")
  }

  on GET("/servererror") () -> Effect[HttpResult[String]] by v: Visitor {
    ServerError("oops")
  }
}
